# pathfinder

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
pathfinder/: db.sqlite3  settings.py
pathfinder/pathfinder/: asgi.py  settings.py  urls.py  wsgi.py
pathfinder/phenomenon/: apps.py  models.py  urls.py  views.py
pathfinder/phenomenon/migrations/: 0001_initial.py  0002_location_country.py  0004_navbaritems.py  0005_auto_20210320_1720.py
pathfinder/phenomenon/static/phenomenon/: index.css  main.css
pathfinder/phenomenon/templates/: base.html  navbar.html
pathfinder/phenomenon/templates/phenomenon/: index.html  location.html  locations.html  phenomena.html
phenomenon/: admin.py  models.py  views.py
phenomenon/migrations/: 0003_auto_20210318_1512.py
phenomenon/static/phenomenon/: index.css  main.css
phenomenon/templates/phenomenon/: about.html  index.html  locations.html
