[tool.poetry]
name = "pathfinder"
version = "0.1.0"
description = ""
authors = ["Tam <tam.jankowska@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
django-taggit = "^1.3.0"
Pillow = "^8.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
